tests/negative/neg_pr118i_enum_duplicate_literals.safe
package neg_pr118i_enum_duplicate_literals

   type color is (red, red);
